# igraph

./: .gitignore  Data-IGraph.html  LICENSE  README.md  doc-index.html  igraph.c  igraph.cabal  igraph.haddock  index-frames.html  index.html  mini_Data-IGraph.html
Data/: IGraph.hs
Data/IGraph/: Basics.hs  Internal.hs  Types.hs
Data/IGraph/Internal/: Constants.chs
cbits/: attributes.c  igraph.c
examples/: Example01.hs  Makefile
tests/: Makefile  Tests.hs
