Name:                 igraph
Version:              0.1
Synopsis:             Bindings to the igraph library.
Description:          Bindings to the igraph library.
License:              BSD3
License-file:         LICENSE
Author:               George Giorgidze
Maintainer:           Giorgidze@Gmail.com
Category:             Data Structures, Graphs
Build-type:           Simple
Cabal-version:        >=1.2

Library
  GHC-options:        -Wall -O3 -funbox-strict-fields 
  CC-options:         -Wall -O3
  Build-depends:      base >= 4.3.1.0, bytestring, unordered-containers, hashable
  Extra-Libraries:    igraph
  C-Sources:
    igraph.c
  Exposed-modules:
    Data.IGraph
  Other-modules:
    Data.IGraph.Basics
    Data.IGraph.Internal
    Data.IGraph.Types
